# remodel

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE.txt  README.md
.github/workflows/: ci.yml  release.yml  rust.yml
examples/: 00-hello-world.lua  01-load-and-save.lua  01-read-model.lua  02-extract-models.lua  03-arguments.lua  04-move-terrain.lua
src/: main.rs  remodel_context.rs  sniff_type.rs  value.rs
src/lua_api/: instance.rs  mod.rs  remodel.rs  tree.rs
src/remodel_api/: instance.rs  json.rs  mod.rs  remodel.rs
src/roblox_api/: cframe.rs  instance.rs  mod.rs
src/rojo_api/: mod.rs  project.rs
test-models/: binary.rbxm  binarystringvalue.rbxmx  color3value.rbxmx  folder-and-value.rbxmx  place-with-models-binary.rbxl  place-with-models.rbxlx  terrain-region.rbxmx
test-scripts/: args.expected  args.lua  attributes.lua  classname-read-only.lua  clear-all-children.lua  clone.lua  destroy.lua  dot-index.lua  equality.lua  find-first-child-of-class.lua  find-first-child.lua  get-children.lua  get-descendants.lua  get-full-name.lua  get-raw-property.lua  get-service-existing.lua  get-service-invalid-service.lua  get-service-new.lua  get-service-not-datamodel.lua  instance-new.lua  is-a.lua  is-file-dir.lua  json-decode.lua  json-encode.lua  load.lua  parent.lua  raw-property-bad-conversion.lua  raw-property-new.lua  raw-property-number.lua  raw-property-string.lua  read-binary-model.lua  read-binary-place.lua  read-dir.lua  read-model.lua  read-place.lua  read-write.lua  remove-dir.lua  remove-file.lua  rename.lua  rojo.lua  (+18 more)
test-scripts-extra/: read-asset-model.lua  read-asset-place.lua  write-asset-model.lua  write-asset-place.lua
tests/: scripts.rs
