[package]
name = "remodel"
version = "0.7.1"
description = "A tool to read, modify, and write Roblox objects."
authors = ["Lucien Greathouse <me@lpghatguy.com>"]
edition = "2018"
license = "MIT"
homepage = "https://github.com/rojo-rbx/remodel"
documentation = "https://github.com/rojo-rbx/remodel"
repository = "https://github.com/rojo-rbx/remodel"
readme = "README.md"

[features]
default = []

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
rbx_binary = { git = "https://github.com/rojo-rbx/rbx-dom", branch = "master" }
rbx_dom_weak = { git = "https://github.com/rojo-rbx/rbx-dom", branch = "master" }
rbx_reflection = { git = "https://github.com/rojo-rbx/rbx-dom", branch = "master" }
rbx_reflection_database = { git = "https://github.com/rojo-rbx/rbx-dom", branch = "master" }
rbx_xml = { git = "https://github.com/rojo-rbx/rbx-dom", branch = "master" }

# rbx_binary = "0.6.0-alpha.1"
# rbx_dom_weak = "2.0.0-alpha.1"
# rbx_reflection = "4.0.0-alpha.1"
# rbx_reflection_database = "0.1.0"
# rbx_xml = "0.12.0-alpha.1"

anyhow = "1.0.27"
backtrace = "0.3.45"
base64 = "0.13.0"
log = "0.4.8"
reqwest = "0.9.20"
rlua = "0.17.0"
serde = "1.0.104"
serde_json = "1.0.44"
structopt = "0.3.11"

[target.'cfg(windows)'.dependencies]
winreg = "0.6.2"

[dependencies.env_logger]
version = "0.7.1"
default-features = false
features = ["termcolor", "atty"]
