[package]
name = "remodel"
version = "0.11.0"
description = "A tool to read, modify, and write Roblox objects."
authors = ["Lucien Greathouse <me@lpghatguy.com>"]
edition = "2021"
license = "MIT"
homepage = "https://github.com/rojo-rbx/remodel"
documentation = "https://github.com/rojo-rbx/remodel"
repository = "https://github.com/rojo-rbx/remodel"
readme = "README.md"

[features]
default = []

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
rbx_binary = "0.6.6"
rbx_cookie = "0.1.2"
rbx_dom_weak = "2.4.0"
rbx_reflection = "4.2.0"
rbx_reflection_database = "0.2.5"
rbx_xml = "0.12.4"

anyhow = "1.0.70"
backtrace = "0.3.67"
base64 = "0.21.0"
log = "0.4.17"
serde = "1.0.160"
serde_json = "1.0.95"
structopt = "0.3.26"

[dependencies.env_logger]
version = "0.10.0"
default-features = false
features = ["auto-color"]

[dependencies.mlua]
version = "0.8.8"
features = ["lua53", "vendored"]

[dependencies.reqwest]
version = "0.11.16"
features = ["blocking"]
